# NetTasker

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: python-package.yml
fastapi-task-app/: alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
fastapi-task-app/alembic/versions/: b79fc4d23421_add_start_date_and_end_date_to_tasks.py
fastapi-task-app/app/: main.py
fastapi-task-app/app/crud/: task_crud.py
fastapi-task-app/app/database/: database.py
fastapi-task-app/app/models/: task_model.py
fastapi-task-app/app/routes/: task_routes.py  websocket_routes.py
fastapi-task-app/app/scheduler/: scheduler.py
fastapi-task-app/app/schemas/: notification.py  task_schema.py  task_status_count.py
fastapi-task-app/app/utils/: task_processing.py
fastapi-task-app/crud/: task_crud.py
fastapi-task-app/database/: database.py
fastapi-task-app/models/: task_model.py
fastapi-task-app/routes/: task_routes.py  websocket_routes.py
fastapi-task-app/scheduler/: scheduler.py
fastapi-task-app/schemas/: notification.py  notification_type_enum.py  task_schema.py  task_status_count.py  task_status_enum.py
fastapi-task-app/tests/: conftest.py
fastapi-task-app/tests/test_routes/: test_tasks.py
fastapi-task-app/utils/: task_processing.py
vue-task-app/: package-lock.json  package.json
vue-task-app/src/: App.vue  main.js
vue-task-app/src/components/: HeaderComponent.vue  PaginationControls.vue  TaskCounters.vue  TaskList.vue
vue-task-app/src/services/: api.js
