[tool.poetry]
name = "fastapi-task-app"
version = "0.1.0"
description = "Task Managing Sample App with REST and WebSockets"
authors = ["Nuno Carvalho dos Santos <nunocarvalhodossantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "24.1.0"
alembic = "1.14.0"
fastapi = "0.115.5"
pydantic = "2.10.3"
sqlalchemy = "2.0.36"
apscheduler = "3.11.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
psycopg2-binary = "2.9.10"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
httpx = "^0.28.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
coverage-badge = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
